# KVPacket

./: .gitignore  AGENTS.md  cron.sh  ddp.sh  ddp_precompute.sh  pyproject.toml  run_eval.py  run_train_filler.py  run_train_filler_with_parallel.py  test.md
dev/: eval.0527.qwen3-8b.biography.txt  training.0526.qwen3-8b.biography.txt  training.0526.qwen3-8b.hotpotqa.txt  training.0526.qwen3-8b.musique.txt  training.0526.qwen3-8b.niah.txt  training.0527.qwen3-8b.niah.txt  training.0529.qwen3-8b.niah.txt
dev/2wikimqa/: training.parallel-teacher.1024samples.ddp8.txt
dev/musique/: training.0617.qwen3-8b.max_new_tokens_768.num_samples_64.use_disk.musique.kvpacket.txt  training.0618.qwen3-8b.max_new_tokens_768.num_samples_64.forward_bs_2.lr5e-4.disk.ddp2.txt  training.0618.qwen3-8b.max_new_tokens_768.num_samples_64.lr5e-4.disk.ddp2.txt  training.0622.qwen3-8b.max_new_tokens_1536.num_samples_10048.forward_bs_2.lr1e-5.disk.ddp8.txt  training.0622.qwen3-8b.max_new_tokens_1536.num_samples_10048.forward_bs_4.lr1e-5.disk.ddp8.txt  training.06222155.qwen3-8b.max_new_tokens_1536.num_samples_10048.forward_bs_2.lr1e-5.disk.ddp8.txt
eval_config/qwen_3_8b/biography/: _default.json  a3_90.json  cache_blend_30.json  cache_blend_50.json  cache_blend_90.json  full_recompute.json  kv_packet.json  no_cache.json  rand_recompute_50.json  rand_recompute_70.json
eval_config/qwen_3_8b/hotpot_qa/: _default.json  a3_30.json  epic_10.json  kv_packet.json  (+3 more)
kv_packet/dataset/: __init__.py  biography.py  loong.py  musique.py  two_wiki_multihop_qa.py
kv_packet/utils/: generate.py  train_filler.py
(+77 files in other folders)
